<resources>
    <string name="app_name">Flash</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="topic1">Topic 1</string>
    <string name="topic2">Topic 2</string>
    <string name="topic3">Topic 3</string>
    <string name="topic4">Topic 4</string>
    <string name="select_topic">Select a Topic to STUDY:</string>
    <string name="select_test_topic">Select a TEST Topic:</string>
    <string name="or">Or:</string>
    <string name="notesInstructions">Your list of notes (swipe left to delete):</string>
    <string name="flashcardsInstructions">Select a topic to view FLASHCARDS:</string>
    <string name="test_yourself">Test Yourself</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerInstruction">Not a member yet? Click here to register!</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="topics">Topics</string>
    <string name="flashcards">Flashcards</string>
    <string name="test_history">Test History</string>
    <string name="logout">Logout</string>
    <string name="find_instructions">Say \'find...\' to search for text</string>
    <string name="loading">Loading...</string>
    <string name="home">Home</string>
    <string name="study">Study</string>
    <string name="testHistoryInstructions">To receive an email with the list of questions that you have scored 100% on, click the following button:</string>
    <string name="send">SEND!</string>
    <string name="instructionsHome">Spend more time in the app to grow your tree AND complete quizzes to adopt more bunnies</string>
    <string name="instructionsNotes">No notes! Highlight content and click \"Add to Notes\" for quick viewing!</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragments</string>
</resources>
